# HelloMiyoo

./: README.md
App/HelloMiyoo/: HelloMiyoo  config.json
App/HelloMiyoo/script/: launch.sh
Source/Union-miyoomini-toolchain/workspace/SDL2-2.26.5/: Makefile  Makefile.rules  config.status  configure  libtool
Source/Union-miyoomini-toolchain/workspace/SDL2-2.26.5/test/: configure
Source/Union-miyoomini-toolchain/workspace/SDL2_image-2.6.3/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libSDL2_image.la  libtool  showanim  showimage
Source/Union-miyoomini-toolchain/workspace/SDL2_image-2.6.3/.deps/: IMG.Plo  IMG_WIC.Plo  IMG_avif.Plo  IMG_bmp.Plo  IMG_gif.Plo  IMG_jpg.Plo  IMG_jxl.Plo  IMG_lbm.Plo  IMG_pcx.Plo  IMG_png.Plo  IMG_pnm.Plo  IMG_qoi.Plo  IMG_stb.Plo  IMG_svg.Plo  IMG_tga.Plo  IMG_tif.Plo  IMG_webp.Plo  IMG_xcf.Plo  IMG_xpm.Plo  IMG_xv.Plo  showanim.Po  showimage.Po
Source/Union-miyoomini-toolchain/workspace/SDL2_image-2.6.3/.libs/: showanim  showimage
Source/Union-miyoomini-toolchain/workspace/SDL2_ttf-2.20.2/: Makefile  Makefile.in  SDL2_ttf.spec  aclocal.m4  config.status  configure  glfont  libSDL2_ttf.la  libSDL2_ttf_la-SDL_ttf.lo  libtool  showfont
Source/Union-miyoomini-toolchain/workspace/hello-miyoo/: CMakeLists.txt  HelloMiyoo.cpp
Source/Union-miyoomini-toolchain/workspace/logs/: SDL2-2.26.5.txt  SDL2_image-2.2.0.txt  SDL2_ttf-2.20.2.txt
Source/VisualStudio/HelloMiyoo/: HelloMiyoo.cpp  HelloMiyoo.sln  HelloMiyoo.vcxproj  HelloMiyoo.vcxproj.filters
(+15 files in other folders)
